[project]
name = "hugging-face-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.ruff]
# Match the line length most Python projects use
line-length = 88
target-version = "py314"

[tool.ruff.lint]
# Enable extra rules: 
# E/F (standard), B (bugbear - finds common bugs), I (isort - sorts imports)
select = ["E", "F", "B", "I"]